--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shard-payout",
   "version": "1.0.0",
   "engines": {
-    "node": "8.x.x"
+    "node": "8.x"
   },
   "description": "",
   "main": "./lib",
@@ -25,9 +25,7 @@
     "discord.js": "^11.1.0",
     "nightmare": "^2.10.0",
     "uws": "^8.14.1",
-    "xlsx": "^0.11.1"
-  },
-  "devDependencies": {
+    "xlsx": "^0.11.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.6.0"
