--- a/package.json
+++ b/package.json
@@ -1,33 +1,32 @@
 {
-  "name": "shard-payout",
+  "name": "swgoh-arena-payout",
   "version": "1.0.0",
   "engines": {
-    "node": "8.x"
+    "node": "~8.0.0"
   },
   "description": "",
   "main": "./lib",
   "scripts": {
     "compile": "babel src --out-dir lib",
-    "start": "npm run compile && node ./lib",
-    "heroku-postbuild": "npm install"
+    "start": "npm run compile && node ./lib"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Tarnadas/shard-payout.git"
+    "url": "git+https://github.com/wjkawecki/swgoh-arena-payout"
   },
   "author": "Mario Reder",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Tarnadas/shard-payout/issues"
+    "url": "https://github.com/wjkawecki/swgoh-arena-payout/issues"
   },
-  "homepage": "https://github.com/Tarnadas/shard-payout#readme",
+  "homepage": "https://github.com/wjkawecki/swgoh-arena-payout#readme",
   "dependencies": {
-    "discord.js": "^11.1.0",
-    "nightmare": "^2.10.0",
-    "uws": "^8.14.1",
-    "xlsx": "^0.11.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
-    "babel-preset-env": "^1.6.0"
+    "babel-preset-env": "~1.6.0",
+    "discord.js": "^11.1.0",
+    "nightmare": "~2.10.0",
+    "uws": "~8.14.1",
+    "xlsx": "~0.11.1"
   }
 }
