--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swgoh-arena-payout",
+  "name": "swgoh-bots",
   "version": "1.0.0",
   "engines": {
     "node": "^8.0.0"
@@ -14,12 +14,12 @@
     "type": "git",
     "url": "git+https://github.com/wjkawecki/swgoh-arena-payout"
   },
-  "author": "Mario Reder",
+  "author": "Wojciech Kawecki",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/wjkawecki/swgoh-arena-payout/issues"
+    "url": "https://github.com/wjkawecki/swgoh-bots/issues"
   },
-  "homepage": "https://github.com/wjkawecki/swgoh-arena-payout#readme",
+  "homepage": "https://github.com/wjkawecki/swgoh-bots#readme",
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
