--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.6.0",
     "discord.js": "^11.1.0",
-    "xlsx": "^0.11.1"
+    "xlsx": "^0.11.1",
+    "mongodb": "^2.2.33"
   }
 }
