--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,10 @@
 				"node": "current"
 			}
 		}]
+	],
+	"plugins": [
+		"transform-es2015-destructuring",
+		"transform-es2015-parameters",
+		"transform-object-rest-spread"
 	]
 }
