--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
     "url": "https://github.com/wjkawecki/swgoh-bots/issues"
   },
   "homepage": "https://github.com/wjkawecki/swgoh-bots#readme",
+  "devDependencies": {
+    "babel-plugin-transform-es2015-spread": "6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0"
+  },
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.6.0",
-    "discord.js": "^11.1.0",
-    "xlsx": "^0.11.1",
-    "mongodb": "^2.2.33"
+    "discord.js": "^11.3.2",
+    "mongodb": "^2.2.33",
+    "npm": "^6.0.1",
+    "xlsx": "^0.11.1"
   }
 }
