--- a/package.json
+++ b/package.json
@@ -20,6 +20,17 @@
     "url": "https://github.com/wjkawecki/swgoh-bots/issues"
   },
   "homepage": "https://github.com/wjkawecki/swgoh-bots#readme",
-  "devDependencies": {},
-  "dependencies": {}
+  "devDependencies": {
+    "babel-plugin-transform-es2015-spread": "6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0"
+  },
+  "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-preset-env": "^1.6.0",
+    "discord.js": "^11.4.0",
+    "mongodb": "^3.1.1",
+    "npm": "^6.4.0",
+    "xlsx": "^0.11.1"
+  }
 }
