--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	"main": "./lib",
 	"scripts": {
 		"compile": "babel src --out-dir lib",
-		"start": "npm run compile && node ./lib"
+		"start": "rm -rf data/**/local/* && npm run compile && node ./lib",
+		"localstart": "npm run compile && node ./lib"
 	},
 	"repository": {
 		"type": "git",
